# stargazer

./: .gitignore  Cargo.toml  setup.cmd  setup.sh  stargazer-review.md  zigcc.sh
src/: lib.rs  main.rs  starfield.rs
web/: index.html
